# react-go-fullstack-template

./: .bazelignore  .bazelrc  .eslintrc.json  .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  jest.config.js  nx.json  package.json  tsconfig.base.json  workspace.json
apps/petricia/api/accounts/: BUILD.bazel  server.go
apps/petricia/desktop/: jest.config.js
apps/petricia/desktop-e2e/: cypress.json
apps/petricia/desktop-e2e/src/integration/: app.spec.ts
apps/petricia/desktop/src/: electron.js  main.tsx
apps/petricia/desktop/src/app/: App.spec.tsx  App.tsx
apps/petricia/mobile/android/app/: build.gradle
apps/petricia/mobile/ios/Mobile/: AppDelegate.m
apps/petricia/mobile/ios/Mobile.xcodeproj/: project.pbxproj
apps/petricia/mobile/src/app/: App.tsx
apps/petricia/web/: jest.config.js
apps/petricia/web-e2e/: cypress.json
apps/petricia/web-e2e/src/integration/: app.spec.ts
apps/petricia/web/pages/: _app.tsx  index.tsx
apps/petricia/web/theme/: index.ts
apps/pulkitbhardwaj/web/: jest.config.js  netlify.toml  next.config.js
apps/pulkitbhardwaj/web-e2e/: cypress.json
apps/pulkitbhardwaj/web-e2e/src/integration/: app.spec.ts
apps/pulkitbhardwaj/web/pages/: _app.tsx  _document.tsx  index.tsx
apps/voice/api/accounts/: BUILD.bazel  server.go
apps/voice/api/gateway/: jest.config.js
apps/voice/api/gateway/src/: main.ts
apps/voice/api/gateway/src/app/: app.gateway.ts  app.source.ts  index.ts
apps/voice/web/: .babelrc  jest.config.js  next.config.js  relay.config.js  schema.graphql
apps/voice/web-e2e/: cypress.json
apps/voice/web-e2e/src/integration/: app.spec.ts
apps/voice/web/pages/: _app.tsx  _document.tsx  index.tsx
apps/voice/web/pages/__generated__/: pagesQuery.graphql.ts
libs/graphql/client/: .babelrc  jest.config.js
libs/graphql/client/src/: index.ts
libs/graphql/client/src/relay/: environment.ts  initialEnvironment.ts
libs/petricia/api/accounts/: gqlgen.yml
libs/petricia/api/accounts/database/: BUILD.bazel  database.go  user.service.go
libs/petricia/api/accounts/dataloaders/: BUILD.bazel  context.go  dataloader.go  userloader_gen.go  usersliceloader_gen.go
libs/petricia/api/accounts/entities/: BUILD.bazel  user.go
libs/petricia/api/accounts/enums/: BUILD.bazel  role.go
libs/petricia/api/accounts/graph/: BUILD.bazel  federation.go  graphql.go
libs/petricia/api/accounts/inputs/: BUILD.bazel  user.go
libs/petricia/api/accounts/resolvers/: BUILD.bazel  entity.resolver.go  mutation.resolver.go  query.resolver.go  resolver.go
libs/petricia/api/accounts/schema/: mutation.graphql  query.graphql  user.graphql
libs/petricia/api/accounts/server/: BUILD.bazel  middlewares.go  server.go
libs/petricia/ui/common/: README.md  jest.config.js
libs/petricia/ui/web/: README.md  jest.config.js
libs/petricia/ui/web/src/: index.ts  styled.d.ts
libs/petricia/ui/web/src/components/app-bar/: AppBar.spec.tsx  AppBar.tsx
libs/petricia/ui/web/src/components/button/: Button.tsx
libs/petricia/ui/web/src/components/logo/: Logo.spec.tsx  Logo.tsx
libs/petricia/ui/web/src/components/search/: Search.spec.tsx  Search.tsx
libs/ui/common/: jest.config.js
libs/ui/mobile/: jest.config.js
libs/ui/mobile/src/: index.ts
libs/ui/mobile/src/components/button/: Button.spec.tsx  Button.tsx
libs/ui/mobile/src/components/form/: Form.spec.tsx  Form.tsx
libs/ui/mobile/src/components/input/: Input.spec.tsx  Input.tsx
libs/ui/web/: jest.config.js
libs/ui/web/src/: index.ts  styled.d.ts
libs/ui/web/src/components/atoms/base-button/: BaseButton.spec.tsx  BaseButton.tsx
libs/ui/web/src/components/atoms/base-search/: BaseSearch.spec.tsx  BaseSearch.tsx
libs/ui/web/src/components/atoms/css-baseline/: CSSBaseline.spec.tsx  CSSBaseline.tsx
libs/ui/web/src/components/atoms/form-helper/: FormHelper.spec.tsx  FormHelper.tsx
libs/ui/web/src/components/atoms/grid/: Grid.spec.tsx  Grid.tsx
libs/ui/web/src/components/atoms/input/: Input.spec.tsx  Input.tsx
libs/ui/web/src/components/atoms/label/: Label.spec.tsx  Label.tsx
libs/ui/web/src/components/atoms/list/: List.spec.tsx  List.tsx
libs/ui/web/src/components/atoms/list-item/: ListItem.spec.tsx  ListItem.tsx
libs/ui/web/src/components/atoms/nav-link/: NavLink.spec.tsx  NavLink.tsx
libs/ui/web/src/components/atoms/portal/: Portal.spec.tsx  Portal.tsx
libs/ui/web/src/components/atoms/video/: Video.spec.tsx  Video.tsx
libs/ui/web/src/components/button/: Button.tsx
libs/ui/web/src/components/molecules/form/: Form.tsx
libs/ui/web/src/components/molecules/modal/: Modal.spec.tsx  Modal.tsx
libs/ui/web/src/components/molecules/nav-bar/: NavBar.spec.tsx  NavBar.tsx
libs/ui/web/src/components/molecules/text-input/: TextInput.spec.tsx  TextInput.tsx
libs/ui/web/src/components/webcam/: Webcam.spec.tsx  Webcam.tsx  polyfill.ts  useWebcam.ts
libs/ui/web/src/utils/: theme.ts  useClickOutside.ts  useDarkMode.ts  useDocument.ts  useModal.ts  usePortal.ts  useWebcam.ts
libs/voice/api/accounts/: gqlgen.yml
libs/voice/api/accounts/auth/: BUILD.bazel  context.go  jwt.go  token.go
libs/voice/api/accounts/database/: BUILD.bazel  database.go  user.service.go
libs/voice/api/accounts/dataloaders/: BUILD.bazel  context.go  dataloader.go  userloader_gen.go  usersliceloader_gen.go
libs/voice/api/accounts/entities/: BUILD.bazel  entities_gen.go  user.go
libs/voice/api/accounts/enums/: BUILD.bazel
libs/voice/api/accounts/graph/: BUILD.bazel  graphql.go
libs/voice/api/accounts/inputs/: BUILD.bazel  user.go
libs/voice/api/accounts/resolvers/: BUILD.bazel  entity.resolver.go  mutation.resolver.go  query.resolver.go  resolver.go  user.resolver.go
libs/voice/api/accounts/schema/: mutation.graphql  query.graphql  user.graphql
libs/voice/api/accounts/server/: BUILD.bazel  middlewares.go  server.go
libs/voice/api/accounts/session/: BUILD.bazel  context.go  store.go
libs/voice/ui/web/: README.md  jest.config.js
tools/builders/electron/: builders.json  package.json
tools/builders/electron/run/: run.impl.ts
(+2 files in other folders)
