load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "accounts_lib",
    srcs = ["server.go"],
    importpath = "github.com/pulkitbhardwaj/incroy/apps/voice/api/accounts",
    visibility = ["//visibility:private"],
    deps = ["//libs/voice/api/accounts/server"],
)

go_binary(
    name = "accounts",
    embed = [":accounts_lib"],
    visibility = ["//visibility:public"],
)
