load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "entities",
    srcs = [
        "entities_gen.go",
        "user.go",
    ],
    importpath = "github.com/pulkitbhardwaj/incroy/libs/voice/api/accounts/entities",
    visibility = ["//visibility:public"],
    deps = [
        "//libs/voice/api/accounts/enums",
        "@io_gorm_gorm//:gorm",
    ],
)
